added popup Booking

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                  </div>
             </section>
 
-            <section class="section-tour">
+            <section class="section-tour" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most Popular Tours
@@ -170,7 +170,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$350</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$450</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$550</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -365,6 +365,28 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                   <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                   <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start Booking Now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Impotant &ndash; Please read these terms before booking.</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed dicta obcaecati nostrum minus perferendis eligendi, deserunt, et nulla, labore fugit fugiat est. Explicabo vel possimus molestiae, nostrum voluptates numquam architecto.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis exercitationem voluptas saepe amet nostrum dolorem eius possimus quo doloremque dicta similique voluptates fuga, animi, tenetur a asperiores consequatur alias quae.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ex ipsum laboriosam inventore sequi dicta doloribus natus odit sunt reiciendis eum modi quibusdam atque, excepturi deserunt facilis reprehenderit veniam cum!
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem optio laborum aperiam laboriosam consectetur hic provident esse laudantium. Dolore magnam doloremque officiis sint eligendi ullam. Veniam nulla laborum voluptas excepturi!.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo rerum at distinctio! Aut perferendis molestias facere soluta hic error, necessitatibus ipsum sapiente excepturi ullam ut quo beatae, nobis eveniet dolorem.
+                    </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+            </div>
+        </div>
        <!--
         <section class="grid">
 
