compress css file

--- a/index.html
+++ b/index.html
@@ -403,9 +403,12 @@
                     <p class="popup__text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed dicta obcaecati nostrum minus perferendis eligendi, deserunt, et nulla, labore fugit fugiat est. Explicabo vel possimus molestiae, nostrum voluptates numquam architecto.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis exercitationem voluptas saepe amet nostrum dolorem eius possimus quo doloremque dicta similique voluptates fuga, animi, tenetur a asperiores consequatur alias quae.
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ex ipsum laboriosam inventore sequi dicta doloribus natus odit sunt reiciendis eum modi quibusdam atque, excepturi deserunt facilis reprehenderit veniam cum!
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem optio laborum aperiam laboriosam consectetur hic provident esse laudantium. Dolore magnam doloremque officiis sint eligendi ullam. Veniam nulla laborum voluptas excepturi!.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo rerum at distinctio! Aut perferendis molestias facere soluta hic error, necessitatibus ipsum sapiente excepturi ullam ut quo beatae, nobis eveniet dolorem.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        <span class="popup__text-hide">
+                            Delectus ex ipsum laboriosam inventore sequi dicta doloribus natus odit sunt reiciendis eum modi quibusdam atque, excepturi deserunt facilis reprehenderit veniam cum!
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem optio laborum aperiam laboriosam consectetur hic provident esse laudantium. Dolore magnam doloremque officiis sint eligendi ullam. Veniam nulla laborum voluptas excepturi!.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo rerum at distinctio! Aut perferendis molestias facere soluta hic error, necessitatibus ipsum sapiente excepturi ullam ut quo beatae, nobis eveniet dolorem.
+                        </span>
                     </p>
                     <a href="#section-book" class="btn btn--green">Book Now</a>
                 </div>
